2006-01-30  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnweb.el (nnweb-google-parse-1): Clarify some comments.

2006-01-30  Andreas Seltenreich <uwi7@stud.uni-karlsruhe.de>

	* nnweb.el (nnweb-type-definition, nnweb-google-parse-1)
	(nnweb-google-create-mapping, nnweb-google-search): Adapt to
	current Google Groups.

2006-01-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-summary-make-tool-bar): Add checks for XEmacs
	and tool-bar-mode.

	* gnus-group.el (gnus-group-make-tool-bar): Add checks for XEmacs
	and tool-bar-mode.

	* message.el (message-tool-bar-update): Simplify.
	(message-make-tool-bar): Add checks for XEmacs and tool-bar-mode.

	* gnus-sum.el (gnus-summary-tool-bar-update): Check for
	gnus-summary-buffer.
	(gnus-summary-tool-bar-gnome): Use "reply-author" icon for
	gnus-summary-reply.

	* gmm-utils.el (gmm): Add :version.

2006-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (clean): New rule.
	(distclean): Use it.

2006-01-26  Steve Youngs  <steve@sxemacs.org>

	* gmm-utils.el (gmm-tool-bar-item, gmm-tool-bar-zap-list): Don't
	autoload.

2006-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-verbose): Add :group.

2006-01-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el: Change some comments WRT tool-bars.

	* gnus-sum.el (gnus-summary-tool-bar)
	(gnus-summary-tool-bar-gnome, gnus-summary-tool-bar-retro)
	(gnus-summary-tool-bar-zap-list): New variables.
	(gnus-summary-make-tool-bar): Complete rewrite using
	`gmm-tool-bar-from-list'.

	* gnus-group.el (gnus-group-tool-bar, gnus-group-tool-bar-gnome)
	(gnus-group-tool-bar-retro, gnus-group-tool-bar-zap-list): New
	variables.
	(gnus-group-make-tool-bar): Complete rewrite using
	`gmm-tool-bar-from-list'.
	(gnus-group-tool-bar-update): New function.

	* message.el (message-mode-field-menu): Add "Show hidden Headers".

2006-01-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-uu.el (mm-uu-dissect-text-parts): Ignore it if a given part